Save the changes

--- a/index.html
+++ b/index.html
@@ -7,30 +7,28 @@
     <meta name="description" content="Amilax Pharmaceuticals — your trusted neighbourhood pharmacy in Eastleigh, Nairobi. Inquire about medicines, upload prescriptions via WhatsApp, and get genuine products dispensed by qualified pharmacists." />
     <meta name="author" content="Amilax Pharmaceuticals" />
 
-    <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <!-- Open Graph -->
     <meta property="og:title" content="Amilax Pharmaceuticals — Quality Medicines" />
     <meta property="og:description" content="Your trusted neighbourhood pharmacy in Eastleigh, Nairobi. Inquire about medicines, upload prescriptions via WhatsApp, and get genuine products." />
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="en_KE" />
     <meta property="og:site_name" content="Amilax Pharmaceuticals" />
+    <meta property="og:image" content="https://amilax-v0.1.vercel.app/og-image.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
-    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Amilax Pharmaceuticals — Quality Medicines" />
     <meta name="twitter:description" content="Trusted pharmacy in Eastleigh, Nairobi. Genuine medicines dispensed by qualified pharmacists." />
+    <meta name="twitter:image" content="https://amilax-v0.1.vercel.app/og-image.jpg" />
 
-    <!-- Geo & Local SEO -->
     <meta name="geo.region" content="KE-110" />
     <meta name="geo.placename" content="Eastleigh, Nairobi" />
 
-    <!-- Theme -->
     <meta name="theme-color" content="#3d8b7a" />
 
-    <!-- JSON-LD Structured Data: LocalBusiness (Pharmacy) -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
